# ShieldShot

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-02-28-aegis-design.md  2026-02-28-shieldshot-implementation.md  2026-03-01-training-improvements-design.md  2026-03-01-training-improvements.md
models/: download_models.py
notebooks/: training_pipeline.ipynb
scripts/: diagnose_nan.py  runpod_train.sh  test_protection.py  train_generator_only.sh
src/shieldshot/: __init__.py  cli.py  protect.py
src/shieldshot/detect/: face_detector.py
src/shieldshot/perturb/: __init__.py  generator.py  losses.py  models.py  pgd.py
src/shieldshot/provenance/: __init__.py  c2pa.py
src/shieldshot/utils/: image.py  quality.py
src/shieldshot/watermark/: decoder.py  encoder.py  payload.py
tests/: test_augmentations.py  test_face_detection.py  test_full_pipeline.py  test_generator.py  test_image_utils.py  test_integration.py  test_losses.py  test_payload.py  test_perturbation.py  test_provenance.py  test_quality.py  test_target_models.py  test_train_generator.py  test_train_watermark.py  test_watermark.py
train/: augmentations.py  generate_pgd_targets.py  train_generator.py  train_watermark.py
