[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldshot"
version = "0.1.0"
description = "Protect your photos from deepfake misuse"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pytorch-msssim>=1.0",
    "lpips>=0.1.4",
    "facenet-pytorch>=2.5",
    "insightface>=0.7",
    "onnxruntime>=1.16",
    "reedsolo>=1.7",
    "c2pa-python>=0.4",
    "transformers>=4.30",
    "open_clip_torch>=2.20",
    "diffusers>=0.25",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
shieldshot = "shieldshot.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that download large models (deselect with '-m \"not slow\"')",
]
